--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -188,7 +188,7 @@
   "input_corrent_count_hint": "請輸入正確的數量",
   "input_count_over_balance": "超過余額",
   "account_is_empty": "賬戶為空",
-  "gas_fee": "網絡費用",
+  "gas_fee": "網絡費用(ETH)",
   "speed_slow": "慢",
   "speed_normal": "平均值",
   "speed_fast": "快",
