--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -304,13 +304,13 @@
   "business_time": "영업시간",
   "please_select_business_hours_hint": "영업 시간을 선택하십시오",
   "throughout_of_day": "하루 종일 (24시간)",
-  "business_time_sunday": "영업시간, 일요일",
-  "business_time_monday": "영업시간, 월요일",
-  "business_time_tuesday": "영업시간, 화요일",
-  "business_time_wednesday": "영업시간, 수요일",
-  "business_time_thursday": "영업시간, 목요일",
-  "business_time_friday": "영업시간, 금요일",
-  "business_time_saturday": ":영업시간, 토요일",
+  "business_time_sunday": "일요일",
+  "business_time_monday": "월요일",
+  "business_time_tuesday": "화요일",
+  "business_time_wednesday": "수요일",
+  "business_time_thursday": "목요일",
+  "business_time_friday": "금요일",
+  "business_time_saturday": ":토요일",
   "confirm_info_wrong": "위치착오 확인",
   "confirm_info_right": "위치 정확함을 확인",
   "category": "카테고리",
@@ -356,8 +356,8 @@
   "epidemic_map": "새로운 코로나바이러스의 발병지도",
   "epidemic_map_desc": "새로운 코로나바이러스의 발병지도 상세설명",
   "ncov_guide": "전염병 예방 안내",
-  "isolation_yes": "격리되었습니다",
-  "isolation_no": "격리 안되었습니다",
+  "isolation_yes": "예",
+  "isolation_no": "아니",
   "isolation_unknown": "격리 미확인",
   "isolation_type_home": "자가 격리",
   "isolation_type_rent": "임대주택 격리",
