--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -310,7 +310,7 @@
   "business_time_wednesday": "수요일",
   "business_time_thursday": "목요일",
   "business_time_friday": "금요일",
-  "business_time_saturday": ":토요일",
+  "business_time_saturday": "토요일",
   "confirm_info_wrong": "위치착오 확인",
   "confirm_info_right": "위치 정확함을 확인",
   "category": "카테고리",
