--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -125,7 +125,7 @@
   "reinput_wallet_password_label": "確認密碼",
   "input_password_again_hint": "請再次輸入密碼",
   "password_not_equal_hint": "密碼不壹致",
-  "input_confirm_wallet_password_hint": "請再次輸入至少6位數的錢包密碼",
+  "input_confirm_wallet_password_hint": "請再次輸入支付密碼",
   "next": "繼續",
   "account_backup_notice": "現在備份妳的賬戶",
   "account_backup_next_step_notice": "在下壹步中，您將看到12個允許您恢復賬戶的單詞",
