--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -836,5 +836,7 @@
   "verify_location_hint": "縮放、移動地圖選定地點位置",
   "please_edit_location_hint": "請編輯所在地圖位置",
   "support_format": "支持jpg、jpeg、png、gif、heic、webp格式",
-  "net_error_hint": "網絡錯誤"
+  "net_error_hint": "網絡錯誤",
+  "dialog_title_delete_wallet_confirm": "确认删除钱包",
+  "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！"
 }
