--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -836,5 +836,17 @@
   "verify_location_hint": "지도에서 선택한 위치를 확대하고 이동합니다",
   "please_edit_location_hint": "위치 맵 위치를 편집하십시오",
   "support_format": "jpg, jpeg, png, gif, heic, webp 형식 지원",
-  "net_error_hint": "네트워크 오류"
+  "net_error_hint": "네트워크 오류",
+  "atlas_current_age": "当前纪元",
+  "block_height": "区块高度",
+  "atlas_elected_nodes": "当选节点",
+  "atlas_candidate_nodes": "候选节点",
+  "atlas_next_age": "下个纪元",
+  "atlas_create_node": "创建Atlas节点",
+  "atlas_launch_tutorial": "开通教程",
+  "atlas_fee_rate": "管理费",
+  "atlas_sign_rate": "签名率",
+  "atlas_total_staking": "总抵押",
+  "atlas_reward_rate": "预期收益",
+  "atlas_node_rank": "节点排名"
 }
