--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -849,5 +849,21 @@
   "support_format": "Support jpg, jpeg, png, gif, heic, webp formats",
   "net_error_hint": "Network error",
   "dialog_title_delete_wallet_confirm": "Confirm delete wallet",
-  "dialog_content_delete_wallet_confirm": "All data of the wallet on the mobile phone will be deleted, please make sure that the wallet mnemonic phrase has been backed up, otherwise it cannot be retrieved!"
+  "dialog_content_delete_wallet_confirm": "All data of the wallet on the mobile phone will be deleted, please make sure that the wallet mnemonic phrase has been backed up, otherwise it cannot be retrieved!",
+  "depth_bit": "深度{selectDepthNum}位",
+  "depth_decimal_places": "深度小数位",
+  "num_decimal_places": "{depthIndex}位",
+  "buy": "买入",
+  "sale": "卖出",
+  "price": "价格",
+  "amount": "金额",
+  "available": "可用",
+  "login_please": "请登录",
+  "current_commission": "当前委托",
+  "input_price_please": "请输入价格",
+  "input_num_please": "请输入数量",
+  "each": "每次",
+  "no_less_than": "不可少于",
+  "no_more_than": "不可多于",
+  "insufficient_balance": "余额不足"
 }
