--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -838,5 +838,21 @@
   "support_format": "支持jpg、jpeg、png、gif、heic、webp格式",
   "net_error_hint": "網絡錯誤",
   "dialog_title_delete_wallet_confirm": "确认删除钱包",
-  "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！"
+  "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！",
+  "depth_bit": "深度{selectDepthNum}位",
+  "depth_decimal_places": "深度小数位",
+  "num_decimal_places": "{depthIndex}位",
+  "buy": "买入",
+  "sale": "卖出",
+  "price": "价格",
+  "amount": "金额",
+  "available": "可用",
+  "login_please": "请登录",
+  "current_commission": "当前委托",
+  "input_price_please": "请输入价格",
+  "input_num_please": "请输入数量",
+  "each": "每次",
+  "no_less_than": "不可少于",
+  "no_more_than": "不可多于",
+  "insufficient_balance": "余额不足"
 }
