[Add] add kline translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -849,5 +849,36 @@
   "support_format": "Support jpg, jpeg, png, gif, heic, webp formats",
   "net_error_hint": "Network error",
   "dialog_title_delete_wallet_confirm": "Confirm delete wallet",
-  "dialog_content_delete_wallet_confirm": "All data of the wallet on the mobile phone will be deleted, please make sure that the wallet mnemonic phrase has been backed up, otherwise it cannot be retrieved!"
+  "dialog_content_delete_wallet_confirm": "All data of the wallet on the mobile phone will be deleted, please make sure that the wallet mnemonic phrase has been backed up, otherwise it cannot be retrieved!",
+  "kline_period_15min": "15 min.",
+  "kline_period_60min": "60 min.",
+  "kline_period_5min": "5 min.",
+  "kline_period_1day": "1 day",
+  "kline_period_min": "realtime",
+  "kline_period_1min": "1 min.",
+  "kline_period_30min": "30 min.",
+  "kline_period_1week": "1 week",
+  "kline_period_1mon": "1 mon.",
+  "kline_period_depth": "Depth",
+  "kline_period_more": "More",
+  "kline_24h_high": "High",
+  "kline_24h_low": "Low",
+  "kline_24h_high": "High",
+  "kline_state_main": "Main",
+  "kline_state_secondary": "2nd",
+  "kline_delegate_buy": "Buy",
+  "kline_delegate_sell": "Sell Order",
+  "kline_delegate_amount": "Amount (HYN)",
+  "kline_delegate_price": "Price (USDT)",
+  "kline_delegate_time": "Time",
+  "kline_delegate_direction": "Direction",
+  "kline_direct_buy": "Buy",
+  "kline_direct_sell": "Sell",
+  "kline_market_buy": "Buy",
+  "kline_market_sell": "Sell",
+  "kline_market_amount": "Amount",
+  "kline_market_buy_price": "Buy Price",
+  "kline_market_sell_price": "Sell Price",
+  "kline_tab_delegation": "Delegation",
+  "kline_tab_market": "Deal"
 }
