--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -845,5 +845,31 @@
   "support_format": "支持jpg、jpeg、png、gif、heic、webp格式",
   "net_error_hint": "网络错误",
   "dialog_title_delete_wallet_confirm": "确认删除钱包",
-  "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！"
+  "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！",
+  "kline_period_15min": "15分钟",
+  "kline_period_60min": "60分钟",
+  "kline_period_5min": "5分钟",
+  "kline_period_1day": "1天",
+  "kline_period_min": "分时",
+  "kline_period_1min": "1分钟",
+  "kline_period_30min": "30分钟",
+  "kline_period_1week": "1周",
+  "kline_period_1mon": "1月",
+  "kline_period_depth": "深度图",
+  "kline_period_more": "更多",
+  "kline_24h_high": "高",
+  "kline_24h_low": "低",
+  "kline_24h_high": "高",
+  "kline_state_main": "主图",
+  "kline_state_secondary": "副图",
+  "kline_delegate_buy": "买盘",
+  "kline_delegate_sell": "卖盘",
+  "kline_delegate_amount": "数量(HYN)",
+  "kline_delegate_price": "价格(USDT)",
+  "kline_delegate_time": "时间",
+  "kline_delegate_direction": "方向",
+  "kline_direct_buy": "买入",
+  "kline_direct_sell": "卖出",
+  "kline_tab_delegation": "挂单委托",
+  "kline_tab_market": "成交"
 }
