--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -838,5 +838,36 @@
   "support_format": "jpg, jpeg, png, gif, heic, webp 형식 지원",
   "net_error_hint": "네트워크 오류",
   "dialog_title_delete_wallet_confirm": "确认删除钱包",
-  "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！"
+  "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！",
+  "kline_period_15min": "15 분",
+  "kline_period_60min": "60 분",
+  "kline_period_5min": "5 분",
+  "kline_period_1day": "1 일",
+  "kline_period_min": "시간 공유",
+  "kline_period_1min": "1 분",
+  "kline_period_30min": "30 분",
+  "kline_period_1week": "1 주",
+  "kline_period_1mon": "1 월",
+  "kline_period_depth": "깊이지도",
+  "kline_period_more": "더보기",
+  "kline_24h_high": "높음",
+  "kline_24h_low": "낮음",
+  "kline_24h_high": "높음",
+  "kline_state_main": "기본 사진",
+  "kline_state_secondary": "보조 사진",
+  "kline_delegate_buy": "구매",
+  "kline_delegate_sell": "판매 주문",
+  "kline_delegate_amount": "금액 (HYN)",
+  "kline_delegate_price": "가격 (USDT)",
+  "kline_delegate_time": "시간",
+  "kline_delegate_direction": "방향",
+  "kline_direct_buy": "구매",
+  "kline_direct_sell": "매도",
+  "kline_market_buy": "구매",
+  "kline_market_sell": "매도",
+  "kline_market_amount": "금액",
+  "kline_market_buy_price": "가격 구매",
+  "kline_market_sell_price": "판매 가격",
+  "kline_tab_delegation": "주문 위임 보류",
+  "kline_tab_market": "거래"
 }
