--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -838,5 +838,36 @@
   "support_format": "支持jpg、jpeg、png、gif、heic、webp格式",
   "net_error_hint": "網絡錯誤",
   "dialog_title_delete_wallet_confirm": "确认删除钱包",
-  "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！"
+  "dialog_content_delete_wallet_confirm": "将删除该钱包在手机上的所有数据，请务必确保钱包助记词已备份，否则无法找回！",
+  "kline_period_15min": "15分鐘",
+  "kline_period_60min": "60分鐘",
+  "kline_period_5min": "5分鐘",
+  "kline_period_1day": "1天",
+  "kline_period_min": "分時",
+  "kline_period_1min": "1分鐘",
+  "kline_period_30min": "30分鐘",
+  "kline_period_1week": "1周",
+  "kline_period_1mon": "1月",
+  "kline_period_depth": "深度圖",
+  "kline_period_more": "更多",
+  "kline_24h_high": "高",
+  "kline_24h_low": "低",
+  "kline_24h_high": "高",
+  "kline_state_main": "主圖",
+  "kline_state_secondary": "副圖",
+  "kline_delegate_buy": "買盤",
+  "kline_delegate_sell": "賣盤",
+  "kline_delegate_amount": "數量(HYN)",
+  "kline_delegate_price": "價格(USDT)",
+  "kline_delegate_time": "時間",
+  "kline_delegate_direction": "方向",
+  "kline_direct_buy": "買入",
+  "kline_direct_sell": "賣出",
+  "kline_market_buy": "買",
+  "kline_market_sell": "賣",
+  "kline_market_amount": "數量",
+  "kline_market_buy_price": "買價",
+  "kline_market_sell_price": "賣價",
+  "kline_tab_delegation": "掛單委托",
+  "kline_tab_market": "成交"
 }
