--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -870,6 +870,11 @@
   "kline_delegate_direction": "方向",
   "kline_direct_buy": "买入",
   "kline_direct_sell": "卖出",
+  "kline_market_buy": "买",
+  "kline_market_sell": "卖",
+  "kline_market_amount": "数量",
+  "kline_market_buy_price": "买价",
+  "kline_market_sell_price": "卖价",
   "kline_tab_delegation": "挂单委托",
   "kline_tab_market": "成交",
   "depth_bit": "深度{selectDepthNum}位",
