[exchange]: replace text strings for later translation

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -904,5 +904,58 @@
   "revoke": "撤销",
   "revoking": "撤销中",
   "completed": "已完成",
-  "has_revoked": "已撤单"
+  "has_revoked": "已撤单",
+  "exchange_login_success": "登录成功!",
+  "exchange_login_failed": "登录失败, 请重试",
+  "exchange_auth": "交易授权",
+  "exchange_auth_description": "你必须先拥有一个私密去中心化钱包，然后授权使用交易兑换功能。",
+  "exchange_loggin_in": "登录中",
+  "exchange_auth_by_wallet": "使用钱包授权登录",
+  "exchange_trade": "交易",
+  "exchange_account": "交易账户",
+  "exchange_latest_price": "最新价",
+  "exchange_change_percentage": "涨跌幅",
+  "exchange_24h_amount": "24H量",
+  "exchange_latest_quote": "最新兑换",
+  "exchange_logged_out": "未登录",
+  "exchange_name": "名称",
+  "exchange_empty_list": "暂无记录",
+  "exchange_order_list_active": "全部委托",
+  "exchange_fee": "手续费",
+  "exchange_order_list_history": "历史记录",
+  "exchange_order_time": "时间",
+  "exchange_order_method": "方式",
+  "exchange_deal_price": "成交价",
+  "exchange_deal_amount": "成交量",
+  "exchange_deal_total": "成交额",
+  "exchange_asset_history": "财务记录",
+  "exchange_wallet_to_exchange_account": "钱包到交易账户",
+  "exchange_exchange_account_to_wallet": "交易账户到钱包",
+  "exchange_wallet_to_exchange": "钱包到交易账户",
+  "exchange_to_wallet": "交易账户到钱包",
+  "exchange_system_bonus": "系统赠币",
+  "exchange_detail": "详情",
+  "exchange_type": "类型",
+  "exchange_amount": "数量",
+  "exchange_network_fee": "网络费用",
+  "exchange_transfer_confirmation": "划转确认",
+  "exchange_transfer_history": "划转记录",
+  "exchange_transfer": "划转",
+  "exchange_from": "从",
+  "exchange_to": "到",
+  "coin_type": "币种",
+  "exchange_transfer_less_than_min": "少于最小划转数",
+  "exchange_transfer_input_amount": "请输入划转数量",
+  "exchange_transfer_min": "最小划转数",
+  "exchange_account_balance": "账户余额",
+  "exchange_wallet_balance": "钱包余额",
+  "exchange": "交易",
+  "exchange_transfer_hint_wallet_to_exchange": "从钱包账户划转到交易账户，需要等待整个网络的确认，大约需要15-30分钟。",
+  "exchange_transfer_hint_account_to_wallet": "从交易账户划转到钱包账户每笔需要收取 {withdrawFee} {selectedCoinType}手续费",
+  "exchange_order_history": "交易记录",
+  "exchange_available": "可用",
+  "exchange_frozen": "冻结",
+  "exchange_total_balance": "交易账户总资产估值",
+  "exchange_buy": "买入",
+  "exchange_sell": "卖出"
 }
