--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -878,7 +878,7 @@
   "price": "价格",
   "amount": "金额",
   "available": "可用",
-  "login_please": "请登录",
+  "login_please": "请授权",
   "current_commission": "当前委托",
   "input_price_please": "请输入价格",
   "input_num_please": "请输入数量",
@@ -888,7 +888,7 @@
   "insufficient_balance": "余额不足",
   "count": "数量",
   "no_orders": "暂无委托单",
-  "view_order_after_login": "登录后查看委托单",
+  "view_order_after_login": "授权后查看委托单",
   "order_cancelled_success": "订单撤销成功",
   "order_completed": "订单已完成",
   "price_market": "价格({market})",
@@ -898,19 +898,19 @@
   "revoking": "撤销中",
   "completed": "已完成",
   "has_revoked": "已撤单",
-  "exchange_login_success": "登录成功!",
-  "exchange_login_failed": "登录失败, 请重试",
+  "exchange_login_success": "授权成功!",
+  "exchange_login_failed": "授权失败, 请重试",
   "exchange_auth": "交易授权",
-  "exchange_auth_description": "你必须先拥有一个私密去中心化钱包，然后授权使用交易兑换功能。",
-  "exchange_loggin_in": "登录中",
-  "exchange_auth_by_wallet": "使用钱包授权登录",
+  "exchange_auth_description": "你必须先创建/导入一个钱包身份，然后使用钱包授权使用交易功能。",
+  "exchange_loggin_in": "授权中",
+  "exchange_auth_by_wallet": "使用钱包授权",
   "exchange_trade": "交易",
   "exchange_account": "交易账户",
   "exchange_latest_price": "最新价",
   "exchange_change_percentage": "涨跌幅",
   "exchange_24h_amount": "24H量",
   "exchange_latest_quote": "最新兑换",
-  "exchange_logged_out": "未登录",
+  "exchange_logged_out": "请授权",
   "exchange_name": "名称",
   "exchange_empty_list": "暂无记录",
   "exchange_order_list_active": "全部委托",
