--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -958,5 +958,6 @@
   "exchange_total_balance": "交易账户总资产估值",
   "exchange_buy": "买入",
   "exchange_sell": "卖出",
-  "exchange_order_list_detail": "成交明细"
+  "exchange_order_list_detail": "成交明细",
+  "limit_price": "限价"
 }
