add ko translation

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -870,92 +870,92 @@
   "kline_market_sell_price": "판매 가격",
   "kline_tab_delegation": "주문 위임 보류",
   "kline_tab_market": "거래",
-  "depth_bit": "深度{selectDepthNum}位",
-  "depth_decimal_places": "深度小数位",
-  "num_decimal_places": "{depthIndex}位",
-  "buy": "买入",
-  "sale": "卖出",
-  "price": "价格",
-  "amount": "金额",
-  "available": "可用",
-  "login_please": "请授权",
-  "current_commission": "当前委托",
-  "input_price_please": "请输入价格",
-  "input_num_please": "请输入数量",
-  "each": "每次",
-  "no_less_than": "不可少于",
-  "no_more_than": "不可多于",
-  "insufficient_balance": "余额不足",
-  "count": "数量",
-  "no_orders": "暂无委托单",
-  "view_order_after_login": "授权后查看委托单",
-  "order_cancelled_success": "订单撤销成功",
-  "order_completed": "订单已完成",
-  "price_market": "价格({market})",
-  "count_market": "数量({market})",
-  "actual_transaction_market": "实际成交({market})",
-  "revoke": "撤销",
-  "revoking": "撤销中",
-  "completed": "已完成",
-  "has_revoked": "已撤单",
-  "exchange_login_success": "授权成功!",
-  "exchange_login_failed": "授权失败, 请重试",
-  "exchange_auth": "交易授权",
-  "exchange_auth_description": "你将使用钱包身份 {walletName} 授权交易功能",
-  "exchange_loggin_in": "授权中",
-  "exchange_auth_by_wallet": "使用钱包授权",
-  "exchange_trade": "交易",
-  "exchange_account": "交易账户",
-  "exchange_latest_price": "最新价",
-  "exchange_change_percentage": "涨跌幅",
-  "exchange_24h_amount": "24H量",
-  "exchange_latest_quote": "最新兑换",
-  "exchange_logged_out": "请授权",
-  "exchange_name": "名称",
-  "exchange_empty_list": "暂无记录",
-  "exchange_order_list_active": "全部委托",
-  "exchange_fee": "手续费",
-  "exchange_order_list_history": "历史记录",
-  "exchange_order_time": "时间",
-  "exchange_order_method": "方式",
-  "exchange_deal_price": "成交价",
-  "exchange_deal_amount": "成交量",
-  "exchange_deal_total": "成交额",
-  "exchange_asset_history": "财务记录",
-  "exchange_wallet_to_exchange_account": "钱包到交易账户",
-  "exchange_exchange_account_to_wallet": "交易账户到钱包",
-  "exchange_wallet_to_exchange": "钱包到交易账户",
-  "exchange_to_wallet": "交易账户到钱包",
-  "exchange_system_bonus": "系统赠币",
-  "exchange_detail": "详情",
-  "exchange_type": "类型",
-  "exchange_amount": "数量",
-  "exchange_network_fee": "网络费用",
-  "exchange_transfer_confirmation": "划转确认",
-  "exchange_transfer_history": "划转记录",
-  "exchange_transfer": "划转",
-  "exchange_from": "从",
-  "exchange_to": "到",
-  "coin_type": "币种",
-  "exchange_transfer_less_than_min": "少于最小划转数",
-  "exchange_transfer_input_amount": "请输入划转数量",
-  "exchange_transfer_min": "最小划转数",
-  "exchange_account_balance": "账户余额",
-  "exchange_wallet_balance": "钱包余额",
-  "exchange": "交易",
-  "exchange_transfer_hint_wallet_to_exchange": "从钱包账户划转到交易账户，需要等待整个网络的确认，大约需要15-30分钟。",
-  "exchange_transfer_hint_account_to_wallet": "从交易账户划转到钱包账户每笔需要收取 {withdrawFee} {selectedCoinType}手续费",
-  "exchange_order_history": "交易记录",
-  "exchange_available": "可用",
-  "exchange_frozen": "冻结",
-  "exchange_total_balance": "交易账户总资产估值",
-  "exchange_buy": "买入",
-  "exchange_sell": "卖出",
-  "exchange_order_list_detail": "成交明细",
-  "limit_price": "限价",
-  "exchange_transfer_history_detail_time": "到账时间",
-  "blockchain_transaction": "区块链交易",
-  "exchange_transfer_amount": "数量",
-  "exchange_withdraw_actual_amount": "实际到账",
-  "exchange_asset_convert": "折合"
+  "depth_bit": "딥{selectDepthNum}자리",
+  "depth_decimal_places": "딥 소수자리",
+  "num_decimal_places": "{depthIndex}자리",
+  "buy": "매입",
+  "sale": "매각",
+  "price": "가격",
+  "amount": "금액",
+  "available": "사용 가능",
+  "login_please": "권한 요청",
+  "current_commission": "현재 위탁",
+  "input_price_please": "가격을 입력해주세요",
+  "input_num_please": "수량을 입력해주세요",
+  "each": "매번",
+  "no_less_than": "최소",
+  "no_more_than": "최대",
+  "insufficient_balance": "잔액 부족",
+  "count": "수량",
+  "no_orders": "위탁서가 없습니다.",
+  "view_order_after_login": "권한 요청 후 위탁서 찾아보기",
+  "order_cancelled_success": "주문 취소 성공",
+  "order_completed": "주문 완료",
+  "price_market": "가격({market})",
+  "count_market": "수량({market})",
+  "actual_transaction_market": "실제 거래({market})",
+  "revoke": "취소",
+  "revoking": "취소중입니다.",
+  "completed": "완료",
+  "has_revoked": "주문서 취소 완료",
+  "exchange_login_success": "권한 요청 완료",
+  "exchange_login_failed": "권한 요청에 실패하였습니다.다시 시도해주세요.",
+  "exchange_auth": "거래 수권",
+  "exchange_auth_description": "수권 거래[지갑명칭] 사용중입니다.",
+  "exchange_loggin_in": "수권중입니다.",
+  "exchange_auth_by_wallet": "지갑 수권을 사용중입니다.",
+  "exchange_trade": "거래",
+  "exchange_account": "거래 계정",
+  "exchange_latest_price": "최신 가격",
+  "exchange_change_percentage": "등락폭",
+  "exchange_24h_amount": "24시간 수량",
+  "exchange_latest_quote": "최신 교환",
+  "exchange_logged_out": "권한 요청을 해주세요.",
+  "exchange_name": "명칭",
+  "exchange_empty_list": "기록이 없습니다.",
+  "exchange_order_list_active": "전부 위탁",
+  "exchange_fee": "수수료",
+  "exchange_order_list_history": "과거 기록",
+  "exchange_order_time": "시간",
+  "exchange_order_method": "방식",
+  "exchange_deal_price": "거래 가격",
+  "exchange_deal_amount": "거래수량",
+  "exchange_deal_total": "거래 금액",
+  "exchange_asset_history": "재무기록",
+  "exchange_wallet_to_exchange_account": "지갑에서 거래 계정으로",
+  "exchange_exchange_account_to_wallet": "거래 계정에서 지갑으로",
+  "exchange_wallet_to_exchange": "지갑에서 거래 계정으로",
+  "exchange_to_wallet": "거래 계정에서 지갑으로",
+  "exchange_system_bonus": "시스템 보너스",
+  "exchange_detail": "상세 정보",
+  "exchange_type": "유형",
+  "exchange_amount": "수량",
+  "exchange_network_fee": "네트워크 비용",
+  "exchange_transfer_confirmation": "이체 확인",
+  "exchange_transfer_history": "이체 기록",
+  "exchange_transfer": "이체",
+  "exchange_from": "...부터",
+  "exchange_to": "...까지",
+  "coin_type": "화페 종류",
+  "exchange_transfer_less_than_min": "최소 이체 수량보다 적어야 한다.",
+  "exchange_transfer_input_amount": "이체 수량을 입력해주세요.",
+  "exchange_transfer_min": "최소 이체 수량",
+  "exchange_account_balance": "계정 잔액",
+  "exchange_wallet_balance": "지갑 잔액",
+  "exchange": "거래",
+  "exchange_transfer_hint_wallet_to_exchange": "지갑 계좌에서 거래 계좌로 이체하려면 전체 인터넷 확인까지 약 15~30분이 소요된다.",
+  "exchange_transfer_hint_account_to_wallet": "이체체 계좌에서 지갑으로 이체 하려면[인출비용 포함][화페 종류 선택]을 통해 비용을 지불해야 합니다.",
+  "exchange_order_history": "거래 기록",
+  "exchange_available": "사용 가능",
+  "exchange_frozen": "동결",
+  "exchange_total_balance": "거래 계정 총 자산 평가",
+  "exchange_buy": "매입",
+  "exchange_sell": "매각",
+  "exchange_order_list_detail": "거래 명세",
+  "limit_price": "제한 가격",
+  "exchange_transfer_history_detail_time": "입금 시간",
+  "blockchain_transaction": "블록체인 거래",
+  "exchange_transfer_amount": "수량",
+  "exchange_withdraw_actual_amount": "실제 입금",
+  "exchange_asset_convert": "환산"
 }
