--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -958,5 +958,16 @@
   "exchange_transfer_amount": "数量",
   "exchange_withdraw_actual_amount": "实际到账",
   "exchange_asset_convert": "折合",
-  "exchange_login_before_view_orders": "授权后查看记录"
+  "exchange_login_before_view_orders": "授权后查看记录",
+  "exchange_recharge_status_1": "处理中",
+  "exchange_recharge_status_2": "已划转",
+  "exchange_withdraw_status_1": "处理中（可取消）",
+  "exchange_withdraw_status_2": "处理中（可取消）",
+  "exchange_withdraw_status_3": "已驳回",
+  "exchange_withdraw_status_4": "处理中（可取消）",
+  "exchange_withdraw_status_5": "处理中（不可取消）",
+  "exchange_withdraw_status_6": "划转成功",
+  "exchange_withdraw_status_7": "划转失败已退款",
+  "exchange_withdraw_status_8": "已取消",
+  "exchange_assets_running_status_2": "空投"
 }
