[exchange]: add translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -969,17 +969,18 @@
   "exchange_transfer_amount": "数量",
   "exchange_withdraw_actual_amount": "实际到账",
   "exchange_asset_convert": "折合",
-  "exchange_login_before_view_orders": "授权后查看记录",
-  "exchange_recharge_status_1": "处理中",
-  "exchange_recharge_status_2": "已划转",
-  "exchange_withdraw_status_1": "处理中（可取消）",
-  "exchange_withdraw_status_2": "处理中（可取消）",
-  "exchange_withdraw_status_3": "已驳回",
-  "exchange_withdraw_status_4": "处理中（可取消）",
-  "exchange_withdraw_status_5": "处理中（不可取消）",
-  "exchange_withdraw_status_6": "划转成功",
-  "exchange_withdraw_status_7": "划转失败已退款",
-  "exchange_withdraw_status_8": "已取消",
-  "exchange_assets_running_status_1": "分红",
-  "exchange_assets_running_status_2": "空投"
+  "exchange_login_before_view_orders": "View records after authorization",
+  "exchange_recharge_status_1": "Processing",
+  "exchange_recharge_status_2": "Transferred",
+  "exchange_withdraw_status_1": "Processing",
+  "exchange_withdraw_status_2": "Processing",
+  "exchange_withdraw_status_3": "Rejected",
+  "exchange_withdraw_status_4": "Processing",
+  "exchange_withdraw_status_5": "Processing",
+  "exchange_withdraw_status_6": "Transferred",
+  "exchange_withdraw_status_7": "Refunded",
+  "exchange_withdraw_status_8": "Cancelled",
+  "exchange_assets_running_status_1": "Dividends",
+  "exchange_assets_running_status_2": "airdrop",
+  "exchange_assets_status": "Status"
 }
