--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -978,5 +978,6 @@
   "exchange_withdraw_status_8": "已取消",
   "exchange_assets_running_status_1": "分红",
   "exchange_assets_running_status_2": "空投",
-  "exchange_assets_status": "状态"
+  "exchange_assets_status": "状态",
+  "exchange_auth_no_wallet": "请先创建/导入钱包身份，然后使用钱包授权使用交易功能。"
 }
