add en translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -881,94 +881,94 @@
   "kline_market_sell_price": "Sell Price",
   "kline_tab_delegation": "Delegation",
   "kline_tab_market": "Deal",
-  "depth_bit": "深度{selectDepthNum}位",
-  "depth_decimal_places": "深度小数位",
-  "num_decimal_places": "{depthIndex}位",
-  "buy": "买入",
-  "sale": "卖出",
-  "price": "价格",
-  "amount": "金额",
-  "available": "可用",
-  "login_please": "请授权",
-  "current_commission": "当前委托",
-  "input_price_please": "请输入价格",
-  "input_num_please": "请输入数量",
-  "each": "每次",
-  "no_less_than": "不可少于",
-  "no_more_than": "不可多于",
-  "insufficient_balance": "余额不足",
-  "count": "数量",
-  "no_orders": "暂无委托单",
-  "view_order_after_login": "授权后查看委托单",
-  "order_cancelled_success": "订单撤销成功",
-  "order_completed": "订单已完成",
-  "price_market": "价格({market})",
-  "count_market": "数量({market})",
-  "actual_transaction_market": "实际成交({market})",
-  "revoke": "撤销",
-  "revoking": "撤销中",
-  "completed": "已完成",
-  "has_revoked": "已撤单",
-  "exchange_login_success": "授权成功!",
-  "exchange_login_failed": "授权失败, 请重试",
-  "exchange_auth": "交易授权",
-  "exchange_auth_description": "You're about to use {walletName} to authorize exchange",
-  "exchange_loggin_in": "授权中",
-  "exchange_auth_by_wallet": "使用钱包授权",
-  "exchange_trade": "交易",
-  "exchange_account": "交易账户",
-  "exchange_latest_price": "最新价",
-  "exchange_change_percentage": "涨跌幅",
-  "exchange_24h_amount": "24H量",
-  "exchange_latest_quote": "最新兑换",
-  "exchange_logged_out": "请授权",
-  "exchange_name": "名称",
-  "exchange_empty_list": "暂无记录",
-  "exchange_order_list_active": "全部委托",
-  "exchange_fee": "手续费",
-  "exchange_order_list_history": "历史记录",
-  "exchange_order_time": "时间",
-  "exchange_order_method": "方式",
-  "exchange_deal_price": "成交价",
-  "exchange_deal_amount": "成交量",
-  "exchange_deal_total": "成交额",
-  "exchange_asset_history": "财务记录",
-  "exchange_wallet_to_exchange_account": "钱包到交易账户",
-  "exchange_exchange_account_to_wallet": "交易账户到钱包",
-  "exchange_wallet_to_exchange": "钱包到交易账户",
-  "exchange_to_wallet": "交易账户到钱包",
-  "exchange_system_bonus": "系统赠币",
-  "exchange_detail": "详情",
-  "exchange_type": "类型",
-  "exchange_amount": "数量",
-  "exchange_network_fee": "网络费用",
-  "exchange_transfer_confirmation": "划转确认",
-  "exchange_transfer_history": "划转记录",
-  "exchange_transfer": "划转",
-  "exchange_from": "从",
-  "exchange_to": "到",
-  "coin_type": "币种",
-  "exchange_transfer_less_than_min": "少于最小划转数",
-  "exchange_transfer_input_amount": "请输入划转数量",
-  "exchange_transfer_min": "最小划转数",
-  "exchange_account_balance": "账户余额",
-  "exchange_wallet_balance": "钱包余额",
-  "exchange": "交易",
-  "exchange_transfer_hint_wallet_to_exchange": "从钱包账户划转到交易账户，需要等待整个网络的确认，大约需要15-30分钟。",
-  "exchange_transfer_hint_account_to_wallet": "Transfer from exchange account to wallet, you need to pay fee with{withdrawFee} {selectedCoinType} ",
-  "exchange_order_history": "交易记录",
-  "exchange_available": "可用",
-  "exchange_frozen": "冻结",
-  "exchange_total_balance": "交易账户总资产估值",
-  "exchange_buy": "买入",
-  "exchange_sell": "卖出",
-  "exchange_order_list_detail": "成交明细",
-  "limit_price": "限价",
-  "exchange_transfer_history_detail_time": "到账时间",
-  "blockchain_transaction": "区块链交易",
-  "exchange_transfer_amount": "数量",
-  "exchange_withdraw_actual_amount": "实际到账",
-  "exchange_asset_convert": "折合",
+  "depth_bit": "Depth{selectDepthNum}位",
+  "depth_decimal_places": "decimal",
+  "num_decimal_places": "{depthIndex}DEC",
+  "buy": "Buy",
+  "sale": "Sell",
+  "price": "Price",
+  "amount": "Amount",
+  "available": "Available",
+  "login_please": "Please authorize",
+  "current_commission": "Current Order",
+  "input_price_please": "Please enter the price",
+  "input_num_please": "Please enter the quantity",
+  "each": "Each",
+  "no_less_than": "No less than",
+  "no_more_than": "No more than",
+  "insufficient_balance": "insufficient balance",
+  "count": "Quantity",
+  "no_orders": "No orders",
+  "view_order_after_login": "View order after authorization",
+  "order_cancelled_success": "Order cancelled successfully",
+  "order_completed": "Order completed",
+  "price_market": "Price",
+  "count_market": "Amount",
+  "actual_transaction_market": "Closing transactions({market})",",
+  "revoke": "Cancel this transaction？",
+  "revoking": "Cancelling",
+  "completed": "completed",
+  "has_revoked": "cancelled",
+  "exchange_login_success": "Authorization succeeded",
+  "exchange_login_failed": "Authorization failed, please try again",
+  "exchange_auth": "Authorize transaction",
+  "exchange_auth_description": "You're about to use {walletName} to authorize this transaction",
+  "exchange_loggin_in": "Authorizing",
+  "exchange_auth_by_wallet": "Authorize by Wallet",
+  "exchange_trade": "Transact",
+  "exchange_account": "Exchange account",
+  "exchange_latest_price": " Last Price",
+  "exchange_change_percentage": "Change%",
+  "exchange_24h_amount": "24H Volume",
+  "exchange_latest_quote": "Latest Trading",
+  "exchange_logged_out": "Please authorize",
+  "exchange_name": "Name",
+  "exchange_empty_list": "No record",
+  "exchange_order_list_active": "All orders",
+  "exchange_fee": " Fee",
+  "exchange_order_list_history": " Transaction History",
+  "exchange_order_time": "Date",
+  "exchange_order_method": "Method",
+  "exchange_deal_price": "Closing Price",
+  "exchange_deal_amount": "Trading Volume",
+  "exchange_deal_total": "Turnover",
+  "exchange_asset_history": " Finance Records",
+  "exchange_wallet_to_exchange_account": "From Wallet to Exchange account",
+  "exchange_exchange_account_to_wallet": "From Exchange account to Wallet",
+  "exchange_wallet_to_exchange": "From Wallet to Exchange account",
+  "exchange_to_wallet": "From Exchange account to Wallet",
+  "exchange_system_bonus": "System Bonus",
+  "exchange_detail": "Details",
+  "exchange_type": "Type",
+  "exchange_amount": "Amount",
+  "exchange_network_fee": "Gas Fee",
+  "exchange_transfer_confirmation": "Transfer confirmed",
+  "exchange_transfer_history": "Transaction Record",
+  "exchange_transfer": "Swap/Transfer",
+  "exchange_from": "Transfer from",
+  "exchange_to": "Transfer to",
+  "coin_type": "Coin",
+  "exchange_transfer_less_than_min": "Less than minimum transfer amount",
+  "exchange_transfer_input_amount": "Please enter the minimum transfer amount",
+  "exchange_transfer_min": "Minimum transfer amount",
+  "exchange_account_balance": "Exchange account balance",
+  "exchange_wallet_balance": "Wallet Balance",
+  "exchange": "Exchange",
+  "exchange_transfer_hint_wallet_to_exchange": "The transaction from a wallet to exchange account requires confirmation from the entire network, which takes about 15-30 minutes.",
+  "exchange_transfer_hint_account_to_wallet": "To transfer from a exchange account to a wallet, please pay for the fee {withdrawFee} {selectedCoinType} ",
+  "exchange_order_history": "Transaction History",
+  "exchange_available": "Available",
+  "exchange_frozen": "Frozen",
+  "exchange_total_balance": "total value of exchange account",
+  "exchange_buy": "Buy",
+  "exchange_sell": "Sell",
+  "exchange_order_list_detail": "Transaction details",
+  "limit_price": "Limit Price",
+  "exchange_transfer_history_detail_time": "Time",
+  "blockchain_transaction": "Blockchain Transaction",
+  "exchange_transfer_amount": "Transfer Amount",
+  "exchange_withdraw_actual_amount": "Closing total",
+  "exchange_asset_convert": "Convert",
   "exchange_login_before_view_orders": "View records after authorization",
   "exchange_recharge_status_1": "Processing",
   "exchange_recharge_status_2": "Transferred",
