add en translation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -902,8 +902,8 @@
   "view_order_after_login": "View order after authorization",
   "order_cancelled_success": "Order cancelled successfully",
   "order_completed": "Order completed",
-  "price_market": "Price",
-  "count_market": "Amount",
+  "price_market": "Price({market})",
+  "count_market": "Amount({market})",
   "actual_transaction_market": "Closing transactions({market})",
   "revoke": "Cancel this transaction？",
   "revoking": "Cancelling",
