--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -983,5 +983,6 @@
   "exchange_assets_running_status_1": "Dividends",
   "exchange_assets_running_status_2": "airdrop",
   "exchange_assets_status": "Status",
-  "exchange_auth_no_wallet": "请先创建/导入钱包身份，然后使用钱包授权使用交易功能。"
+  "exchange_auth_no_wallet": "请先创建/导入钱包身份，然后使用钱包授权使用交易功能。",
+  "exchange_authorize": "请授权交易账户"
 }
