--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -979,5 +979,6 @@
   "exchange_assets_running_status_1": "分红",
   "exchange_assets_running_status_2": "空投",
   "exchange_assets_status": "状态",
-  "exchange_auth_no_wallet": "请先创建/导入钱包身份，然后使用钱包授权使用交易功能。"
+  "exchange_auth_no_wallet": "请先创建/导入钱包身份，然后使用钱包授权使用交易功能。",
+  "exchange_authorize": "请授权交易账户"
 }
