--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -983,6 +983,6 @@
   "exchange_assets_running_status_1": "Dividends",
   "exchange_assets_running_status_2": "airdrop",
   "exchange_assets_status": "Status",
-  "exchange_auth_no_wallet": "请先创建/导入钱包身份，然后使用钱包授权使用交易功能。",
-  "exchange_authorize": "请授权交易账户"
+  "exchange_auth_no_wallet": "Please create/import a wallet identity first, and then use the wallet to authorize the transaction function.",
+  "exchange_authorize": "Please authorize trading account"
 }
