--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -971,6 +971,6 @@
   "exchange_withdraw_status_8": "已取消",
   "exchange_assets_running_status_2": "空投",
   "exchange_assets_status": "狀態",
-  "exchange_auth_no_wallet": "请先创建/导入钱包身份，然后使用钱包授权使用交易功能。",
-  "exchange_authorize": "请授权交易账户"
+  "exchange_auth_no_wallet": "請先創建/導入錢包身份，然後使用錢包授權使用交易功能。",
+  "exchange_authorize": "請授權交易賬戶"
 }
