--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -972,5 +972,6 @@
   "exchange_assets_running_status_2": "空投",
   "exchange_assets_status": "狀態",
   "exchange_auth_no_wallet": "請先創建/導入錢包身份，然後使用錢包授權使用交易功能。",
-  "exchange_authorize": "請授權交易賬戶"
+  "exchange_authorize": "請授權交易賬戶",
+  "exchange_ask_auth_again": "交易授權過期，是否使用錢包重新授權？"
 }
