[exchange]: update ui

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -911,11 +911,11 @@
   "has_revoked": "cancelled",
   "exchange_login_success": "Authorization succeeded",
   "exchange_login_failed": "Authorization failed, please try again",
-  "exchange_auth": "Authorize transaction",
+  "exchange_auth": "Authorize Exchange",
   "exchange_auth_description": "You're about to use {walletName} to authorize this transaction",
   "exchange_loggin_in": "Authorizing",
-  "exchange_auth_by_wallet": "Authorize by Wallet",
-  "exchange_trade": "Transact",
+  "exchange_auth_by_wallet": "Authorize",
+  "exchange_trade": "Trade",
   "exchange_account": "Exchange account",
   "exchange_latest_price": " Last Price",
   "exchange_change_percentage": "Change%",
@@ -926,27 +926,27 @@
   "exchange_empty_list": "No record",
   "exchange_order_list_active": "All orders",
   "exchange_fee": " Fee",
-  "exchange_order_list_history": " Transaction History",
+  "exchange_order_list_history": " Trade History",
   "exchange_order_time": "Date",
   "exchange_order_method": "Method",
   "exchange_deal_price": "Closing Price",
   "exchange_deal_amount": "Trading Volume",
   "exchange_deal_total": "Turnover",
   "exchange_asset_history": " Finance Records",
-  "exchange_wallet_to_exchange_account": "From Wallet to Exchange account",
-  "exchange_exchange_account_to_wallet": "From Exchange account to Wallet",
-  "exchange_wallet_to_exchange": "From Wallet to Exchange account",
-  "exchange_to_wallet": "From Exchange account to Wallet",
+  "exchange_wallet_to_exchange_account": "Wallet to Exchange account",
+  "exchange_exchange_account_to_wallet": "Exchange account to Wallet",
+  "exchange_wallet_to_exchange": "Wallet to Exchange account",
+  "exchange_to_wallet": "Exchange account to Wallet",
   "exchange_system_bonus": "System Bonus",
   "exchange_detail": "Details",
   "exchange_type": "Type",
   "exchange_amount": "Amount",
   "exchange_network_fee": "Gas Fee",
   "exchange_transfer_confirmation": "Transfer confirmed",
-  "exchange_transfer_history": "Transaction Record",
-  "exchange_transfer": "Swap/Transfer",
-  "exchange_from": "Transfer from",
-  "exchange_to": "Transfer to",
+  "exchange_transfer_history": "Transfer History",
+  "exchange_transfer": "Transfer",
+  "exchange_from": "From",
+  "exchange_to": "To",
   "coin_type": "Coin",
   "exchange_transfer_less_than_min": "Less than minimum transfer amount",
   "exchange_transfer_input_amount": "Please enter the minimum transfer amount",
@@ -956,10 +956,10 @@
   "exchange": "Exchange",
   "exchange_transfer_hint_wallet_to_exchange": "The transaction from a wallet to exchange account requires confirmation from the entire network, which takes about 15-30 minutes.",
   "exchange_transfer_hint_account_to_wallet": "To transfer from a exchange account to a wallet, please pay for the fee {withdrawFee} {selectedCoinType} ",
-  "exchange_order_history": "Transaction History",
+  "exchange_order_history": "Trade History",
   "exchange_available": "Available",
   "exchange_frozen": "Frozen",
-  "exchange_total_balance": "total value of exchange account",
+  "exchange_total_balance": "Total value of exchange account",
   "exchange_buy": "Buy",
   "exchange_sell": "Sell",
   "exchange_order_list_detail": "Transaction details",
