[exchange]: add re-auth

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -951,8 +951,8 @@
   "exchange_transfer_less_than_min": "Less than minimum transfer amount",
   "exchange_transfer_input_amount": "Please enter the minimum transfer amount",
   "exchange_transfer_min": "Minimum transfer amount",
-  "exchange_account_balance": "Exchange account balance",
-  "exchange_wallet_balance": "Wallet Balance",
+  "exchange_account_balance": "Balance",
+  "exchange_wallet_balance": "Balance",
   "exchange": "Exchange",
   "exchange_transfer_hint_wallet_to_exchange": "The transaction from a wallet to exchange account requires confirmation from the entire network, which takes about 15-30 minutes.",
   "exchange_transfer_hint_account_to_wallet": "To transfer from a exchange account to a wallet, please pay for the fee {withdrawFee} {selectedCoinType} ",
